service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: kcd
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
